# neurotk

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  example.py  neurotk_architecture.mmd  neurotk_jors.docx  paper.bib  paper.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  draft-pdf.yml  python-publish.yml  release.yml
assets/: make_figure.py
docs/: cli-reference.md
neurotk/: __init__.py  cli.py  preprocess.py  report_html.py  transforms.py  utils.py  validate.py
neurotk/inference/: __init__.py  config.py  io_utils.py  metrics.py  monai_compat.py  predictor.py  runner.py
neurotk/stats/: __init__.py  image_stats.py
neurotk/web/: app.py
neurotk/web/static/: style.css
neurotk/web/templates/: index.html  report.html
site/: tailwind.config.js
site/src/app/: globals.css  page.tsx
tests/: conftest.py  test_cli_methods.py  test_inference_cohort_stats.py  test_inference_lesion_volume.py  test_inference_monai_compat.py  test_inference_normal_ct_flags.py  test_inference_runner_skip.py  test_webapp_cli_commands.py
tests/fixtures/: validate_only.json  validate_preprocess.json
tools/: generate_figure.py
webapp/: main.py
webapp/outputs/26596e17353d44fbbd5922a3b91ae659/: report.html
webapp/outputs/2f73fd5f5c684322abc125facc7ae276/: report.html
webapp/outputs/54045f276c044434a8a0025fb4e6e194/: report.html
webapp/static/: style.css
webapp/templates/: index.html  result.html
(+7 files in other folders)
