[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotk"
version = "0.1.0"
description = "Dataset validation toolkit for neurology brain imaging (NIfTI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "nibabel", "scipy", "matplotlib"]

[project.scripts]
neurotk = "neurotk.cli:main"
