[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotk"
version = "0.3.1"
description = "Dataset validation and preprocessing toolkit for neurology brain imaging (NIfTI)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Sakshi Rathi", email = "rathi036@umn.edu" }
]
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "nibabel",
  "scipy",
  "matplotlib",
  "pyyaml",
  "fastapi",
  "uvicorn",
  "jinja2",
  "python-multipart"
]

[project.optional-dependencies]
inference = [
  "torch>=2.3,<2.10",
  "monai>=1.3,<1.6",
  "pytorch-ignite>=0.4.11,<0.6",
  "tqdm",
  "huggingface_hub",
  "packaging>=23.0"
]
bundle = [
  "torch>=2.3,<2.10",
  "monai>=1.3,<1.6",
  "pytorch-ignite>=0.4.11,<0.6",
  "tqdm",
  "huggingface_hub",
  "packaging>=23.0"
]

[project.scripts]
neurotk = "neurotk.cli:main"

[tool.setuptools.packages.find]
include = ["neurotk", "neurotk.*"]
